Int 640 integration tests for graph ql hl7 mdm mutation (#149)
INT-634 and INT-640 HL7v2 MDM service and its integration tests